--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,4 +5,4 @@ phases:
       java: latest
   build:
     commands:
-      - mvn verify sonar:sonar -Dsonar.projectKey=aws_sonarcloud  -Dsonar.organization=aws_sonarcloud -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=3c24e4a1062da142d4eaf6fa947347b9243e3122 
+      - mvn verify sonar:sonar -Dsonar.projectKey=aws_new  -Dsonar.organization=aws_new -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=129287299e717638c401789025bcb4397807d312 
