--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,5 +5,5 @@ phases:
       java: latest
   build:
     commands:
-      - mvn verify sonar:sonar -Dsonar.projectKey=aws_new -Dsonar.organization=aws_new -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=129287299e717638c401789025bcb4397807d312 
+      - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=aws_new
       
